# seam-carving

./: CMakeLists.txt  README.md  gui.cpp  gui.h  main.cpp  seam_carv.cpp  seam_carv.h  seam_carv_dynamic.cpp  seam_carv_dynamic.h  seam_carv_random.cpp  seam_carv_random.h  test.cpp  tjczt3ub.lga.txt
